--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </section>
       </main>
 
-      <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.>'
+      <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.' width='600px' height='400px'>
 
   <div>
     <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
