--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <!-- welcome to my new webpage -->
 <!-- this is a comment in html5 -->
-
 <head>
+  <link rel='stylesheet' href='styles.css'>
+
   <body>
     <main>
       <section>
-        <h1> My Cool Webpage </h1>
+        <h1 class="glow"> Medp331 Webpage </h1>
       </section>
       </main>
 
