--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <section>
-        <h1 class="glow"> Medp331 Webpage </h1>
+        <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </section>
       </main>
 
