--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
   <link rel='stylesheet' href='styles.css'>
 
   <body>
-    <main>
+
       <section>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </section>
-      </main>
+
+      <div id="navbar">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+</div>
 
       <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.' width='600px' height='400px'>
 
   <div>
     <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
     </div>
+
+    <script src="script.js"></script>
+
       </body>
   <!-- Metadata goes here -->
   </head>
