--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
 
   <body>
 
-      <section>
+      <header>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
-      </section>
+      </header>
 
-      <div id="navbar">
-  <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-</div>
 
       <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.' width='600px' height='400px'>
 
