--- a/index.html
+++ b/index.html
@@ -10,9 +10,20 @@
       <header>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
+      <section>
+
+        <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.' width='600px' height='400px'>
+        <article>
+          <h2>Censorship</h2>
+          <p>Definition: "Supervision and control of the information and ideas that are circulated among the people within a society. In modern times, censorship refers to the examination of books, periodicals, plays, films, television and radio programs, news reports, and other communication media for the purpose of altering or suppressing parts thought to be objectionable or offensive."
+              -- Funk & Wagnalls New World Encyclopedia</p>
+              <h2>Propaganda</h2>
+          <p>Definition: A form of purposeful persuasion that attempts to influence the emotions, attitudes, opinions, and actions of specified target audiences for ideological, political or commercial purposes through the controlled transmission of one-sided messages (which may or may not be factual) via mass and direct media channels.
+          -- Richard Alan Nelson, author of A Chronology and Glossary of Propaganda in the United States, 1996</p>
+        </article>
+      </section>
 
 
-      <img src='./img/nyc_sunset.jpeg' alt='A sunset in NYC.' width='600px' height='400px'>
 
   <div>
     <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
