--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <!-- welcome to my new webpage -->
 <!-- this is a comment in html5 -->
 <head>
+  <title>MEDP331 Homepage</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='styles.css'>
 
   <body>
@@ -12,7 +17,7 @@
       </header>
 
       <section>
-        <img src='./img/self.jpeg' alt='A picture of myself.' width='400px' height='600px'>
+        <img src='./img/self.jpg' alt='A picture of myself.' width='400px' height='600px'>
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
