--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
   <body>
 
       <header>
-        <h1 class="glow"> MEDP331 HOMEPAGE </h1>
+        <div id=container>
+  MEDP331
+  <div id=flip>
+    <div><div>home</div></div>
+    <div><div>web</div></div>
+    <div><div>Everything</div></div>
+  </div>
+  Page!
+</div>
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' width='400px' height='600px'>
+        <img src='./img/self.jpg' alt='A picture of myself.' width='540' height='720'>
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
