--- a/index.html
+++ b/index.html
@@ -12,32 +12,17 @@
 
   <body>
 
-      <header>
-        <div id=container>
-  MEDP331
-  <div id=flip>
-    <div><div>home</div></div>
-    <div><div>web</div></div>
-    <div><div>Everything</div></div>
-  </div>
-  Page!
+    <div id=container>
+Make
+<div id=flip>
+  <div><div>wOrK</div></div>
+  <div><div>lifeStyle</div></div>
+  <div><div>Everything</div></div>
 </div>
-      </header>
+AweSoMe!
+</div>
 
-      <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' width='540' height='720'>
-        <article>
-          <b>YOSELIN CASTELAN RAMIREZ
-<br>23 | NYC | MEXICAN
-<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!</b>
-          </article>
-      </section>
-
-
-
-  <div>
-    <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
-    </div>
+<p>a css3 animation demo</p>
 
     <script src="script.js"></script>
 
