--- a/index.html
+++ b/index.html
@@ -12,17 +12,9 @@
 
   <body>
 
-    <div id=container>
-Make
-<div id=flip>
-  <div><div>wOrK</div></div>
-  <div><div>lifeStyle</div></div>
-  <div><div>Everything</div></div>
-</div>
-AweSoMe!
-</div>
-
-<p>a css3 animation demo</p>
+    <div class="center">
+    <h1 class="center__text glitch is-glitching" data-text="Hover me!">MEDP331 HOMEPAGE</h1>
+  </div>
 
     <script src="script.js"></script>
 
