--- a/index.html
+++ b/index.html
@@ -15,14 +15,8 @@
 </header>
 
 <section>
-  <nav>
- <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="hw9_imgs/p1.png" style="width:100%">
-  <img class="mySlides" src="hw9_imgs/p2.jpg" style="width:100%">
-  <img class="mySlides" src="hw9_imgs/p3.jpg" style="width:100%">
-  <img class="mySlides" src="hw9_imgs/p4.jpg" style="width:100%">
-</div>
-  </nav>
+  <img src='./img/self.jpg' alt='A picture of me.>'
+
 
   <article>
     <h2>Censorship</h2>
