--- a/index.html
+++ b/index.html
@@ -1,111 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<!-- welcome to my new webpage -->
+<!-- this is a comment in html5 -->
 <head>
-<title>MEDP331 HOMEPAGE</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="styles.css">
-</head>
+  <title>MEDP331 Homepage</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel='stylesheet' href='styles.css'>
 
-<body>
-<header>
-  <h1>MEDP331 HOMEPAGE</h1>
-</header>
+  <body>
 
-<section>
-  <img src='./img/self.jpg' alt='A picture of me.>'
-
-
-  <article>
-    <h2>Censorship</h2>
-    <p>Definition: "Supervision and control of the information and ideas that are circulated among the people within a society. In modern times, censorship refers to the examination of books, periodicals, plays, films, television and radio programs, news reports, and other communication media for the purpose of altering or suppressing parts thought to be objectionable or offensive."
-        -- Funk & Wagnalls New World Encyclopedia</p>
-        <h2>Propaganda</h2>
-    <p>Definition: A form of purposeful persuasion that attempts to influence the emotions, attitudes, opinions, and actions of specified target audiences for ideological, political or commercial purposes through the controlled transmission of one-sided messages (which may or may not be factual) via mass and direct media channels.
-    -- Richard Alan Nelson, author of A Chronology and Glossary of Propaganda in the United States, 1996</p>
-  </article>
-</section>
-
-<section class="container">
-  <div class="left-half">
-    <div class="a">
-      <div class="centered">
-    <aside>
-      <h3>Forms of censorship:</h3>
-      <img src="hw9_imgs/p6.gif" alt="censorship">
-      <p>&middot; Preventive - this exercised before the expression is made public and are: prior restraint by government, licensing, self-censorship
-        <br> &middot; Punitive - this is exercised after the expression is made public. This sums up all the negative consequences that a citizen or a journalist may face when talking about or reporting on a certain topic ex; negative feedback, imprisonment and even death
-        <br> &middot; What can be censored? Speech, books, films, plays, photography, television programs, radio programs, internet, news reports, etc.
-      </p>
-    </aside>
+      <header>
+        <div id=container>
+  MEDP331
+  <div id=flip>
+    <div><div>home</div></div>
+    <div><div>web</div></div>
+    <div><div>Everything</div></div>
   </div>
-  </div>
-  </div>
-  <div class="right-half">
-    <div class="a">
-      <div class="centered">
-    <aside>
-      <h3>Forms of propaganda:</h3>
-      <img src="hw9_imgs/p5.gif" alt="propaganda">
-      <p>&middot; Bandwagon - The propagandist puts forth the idea that everyone is doing this, therefore you should be a part of the trend
-      <br>&middot; Testimonial - Celebrity endorsement of a philosophy, movement or candidate.
-      <br> &middot; Plain Folks - The candidate or cause is identified with common people from everyday walks of life.
-      <br> &middot; Transfer - Employs the use of symbols, quotes or the images of famous people to convey a message not necessarily associated with them.
-      <br> &middot; Fear - Technique popular among political parties and PACs (Political Action Committees) in the US. To present a dreaded cirumstance and followed by the persuasive behavior desired by the people.
-      <br> &middot; Logical Fallacies - Conclusion is created by a twisting of logic, and is therefore a fallacy.
-      <br> &middot; Glittering Generalities - A generally accepted virtue is usually employed to stir up favorable emotions.
-      <br> &middot; Name-calling - Ties a person or cause to a largely perceived negative image.
-      </p>
-    </aside>
-  </div>
-  </div>
-  </div>
-</section>
-
-<div class="clearfix">
-<summary>
-    <video class="video" src="media/debate.mp4" width="440" height="280" controls>
-</video>
-<h2>Censorship in U.S Media</h2>
-<p>"The purpose of censorship is to change or stifle acts, thoughts or publications, which are seen as repulsive, harmful, politically unwanted or, for example, contrary to the interests of state officials."</p>
-<p>While new technology allows for the free flow of information, it can also be manipulated by repressive governments to stifle free expression. Information technologies have only made censorship more complicated and strictly monitered. With the TRUMP administration for example, faced with a president who tweets frequently about “fake news,” U.S. journalists today feel more susceptible to censorship, as noted by Alan Huffman, a freelance journalist. Additionally, during the 2020 presidential election social media platforms were the pinnacle of the citizen's decisions and news sources.
-</p>
-</summary>
+  Page!
 </div>
+      </header>
 
-<div class="clearfix">
-  <div class="b">
-<aside>
-    <video class="video" src="media/propaganda.mp4" width="440" height="280" controls>
-</video>
-<h2>Propaganda in U.S Media</h2>
-<p>"In a world before social media and the internet, how did the United States encourage and promote American citizens in the 1930s and 1940s to contribute to the war effort? The answer-propaganda and lots of it." - Rob Price</p>
-<p>All around us the internet and social media platforms have a way of persuading the human mind into seeing what's trending and like all human traits we are prone to follow what society shows us. In today's world problems as we all know one of the most known country to use different forms of propaganda is, China. <i>And how might that affect the U.S?</i> Well, credibility is for one misguided and news outlets all showcase different statistics as well as news that they want to showcase their audience. American journalists must work harder to get concrete information and not fall unto propaganda hands.
-</p>
-</aside>
-</div>
-</div>
+      <section>
+        <img src='./img/self.jpg' alt='A picture of myself.' width='540' height='720'>
+        <article>
+          <b>YOSELIN CASTELAN RAMIREZ
+<br>23 | NYC | MEXICAN
+<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!</b>
+          </article>
+      </section>
 
 
-    <div class="a">
-      <div class="centered">
-<footer>
-  <h4>Sources</h4>
-     <p><a href="https://media.okstate.edu/faculty/jsenat/censorship/defining.htm">Defining Censorship</a>
-      <br><a href="https://www.euppublishing.com/userimages/ContentEditor/1429263846827/Media,%20Persuasion,%20Propaganda.pdf">Media, Persuasion, and Propraganda</a>
-      <br><a href="https://theconversation.com/how-socialism-became-un-american-through-the-ad-councils-propaganda-campaigns-132335">American Ad Propaganda Campaign</a>
-      <br><a href="https://www.youtube.com/watch?v=vw3v-E7OOlA">Censorship in the USA</a>
-      <br><a href="https://mediaguide.fi/mediaguide/censorship-self-censorship-and-the-violations-of-freedom-of-speech/">Violations of Freedom of Speech</a>
-      <br><a href="https://journalism.columbia.edu/censorship-digital-age">Censorship Digital Age</a>
-      </p>
-</footer>
-  </div>
-  </div>
 
-<script src="myJava.js"></script>
+    <script src="script.js"></script>
 
+      </body>
+  <!-- Metadata goes here -->
+  </head>
 
-</body>
 </html>
