--- a/index.html
+++ b/index.html
@@ -13,19 +13,11 @@
   <body>
 
       <header>
-        <div id=container>
-  MEDP331
-  <div id=flip>
-    <div><div>home</div></div>
-    <div><div>web</div></div>
-    <div><div>Everything</div></div>
-  </div>
-  Page!
-</div>
+        <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' width='540' height='720'>
+        <img src='./img/self.jpg' alt='A picture of myself.' width='400px' height='600px'>
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
@@ -34,6 +26,10 @@
       </section>
 
 
+
+  <div>
+    <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
+    </div>
 
     <script src="script.js"></script>
 
