--- a/index.html
+++ b/index.html
@@ -27,9 +27,78 @@
 
 
 
-  <div>
-    <p> This is a super cool webpage I made. It doesn't have much content in it yet.</p>
-    </div>
+      <section class="container">
+        <div class="left-half">
+          <div class="a">
+            <div class="centered">
+          <aside>
+            <h3>Photography Work:</h3>
+            <div class="slideshow-container">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 5</div>
+  <img src="./img/flower.jpg" style="width:100%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">2 / 5</div>
+  <img src="./img/niagara.jpg" style="width:100%">
+  <div class="text">Caption Two</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 5</div>
+  <img src="./img/sunset.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">4 / 5</div>
+  <img src="./img/trainstop.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">5 / 5</div>
+  <img src="./img/butterfly.jpg" style="width:100%">
+  <div class="text">Caption Three</div>
+</div>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
+          </aside>
+        </div>
+        </div>
+        </div>
+        <div class="right-half">
+          <div class="a">
+            <div class="centered">
+          <aside>
+            <h3>Forms of propaganda:</h3>
+            <img src="hw9_imgs/p5.gif" alt="propaganda">
+            <p>&middot; Bandwagon - The propagandist puts forth the idea that everyone is doing this, therefore you should be a part of the trend
+            <br>&middot; Testimonial - Celebrity endorsement of a philosophy, movement or candidate.
+            <br> &middot; Plain Folks - The candidate or cause is identified with common people from everyday walks of life.
+            <br> &middot; Transfer - Employs the use of symbols, quotes or the images of famous people to convey a message not necessarily associated with them.
+            <br> &middot; Fear - Technique popular among political parties and PACs (Political Action Committees) in the US. To present a dreaded cirumstance and followed by the persuasive behavior desired by the people.
+            <br> &middot; Logical Fallacies - Conclusion is created by a twisting of logic, and is therefore a fallacy.
+            <br> &middot; Glittering Generalities - A generally accepted virtue is usually employed to stir up favorable emotions.
+            <br> &middot; Name-calling - Ties a person or cause to a largely perceived negative image.
+            </p>
+          </aside>
+        </div>
+        </div>
+        </div>
+      </section>
 
     <script src="script.js"></script>
 
