--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' style="width:50%,">
+        <img src='./img/self.jpg' alt='A picture of myself.' style="width:50%">
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
