--- a/index.html
+++ b/index.html
@@ -73,17 +73,11 @@
           <div class="a">
             <div class="centered">
           <aside>
-            <h3>Forms of propaganda:</h3>
-            <img src="hw9_imgs/p5.gif" alt="propaganda">
-            <p>&middot; Bandwagon - The propagandist puts forth the idea that everyone is doing this, therefore you should be a part of the trend
-            <br>&middot; Testimonial - Celebrity endorsement of a philosophy, movement or candidate.
-            <br> &middot; Plain Folks - The candidate or cause is identified with common people from everyday walks of life.
-            <br> &middot; Transfer - Employs the use of symbols, quotes or the images of famous people to convey a message not necessarily associated with them.
-            <br> &middot; Fear - Technique popular among political parties and PACs (Political Action Committees) in the US. To present a dreaded cirumstance and followed by the persuasive behavior desired by the people.
-            <br> &middot; Logical Fallacies - Conclusion is created by a twisting of logic, and is therefore a fallacy.
-            <br> &middot; Glittering Generalities - A generally accepted virtue is usually employed to stir up favorable emotions.
-            <br> &middot; Name-calling - Ties a person or cause to a largely perceived negative image.
-            </p>
+            <h3>Film Work:</h3>
+            <video width="320" height="240" controls>
+  <source src="https://vimeo.com/464627366" type="video/mp4">
+  Define A Place.
+</video>
           </aside>
         </div>
         </div>
