--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' style="width:50%">
+        <img src='./img/self.jpg' alt='A picture of myself.' style="height:40%">
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
@@ -30,7 +30,6 @@
       <section class="container">
         <div class="left-half">
           <div class="a">
-            <div class="centered">
           <aside>
             <h3>Photography Work:</h3>
             <div class="slideshow-container">
@@ -59,8 +58,6 @@
 <br>
 
 <div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
   <span class="dot"></span>
