--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' style="height:40%">
+        <img src='./img/self.jpg' alt='A picture of myself.' style="width:35%">
         <article>
           <b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
@@ -36,31 +36,24 @@
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 3</div>
-  <img src="./img/flower.jpg" style="width:100%">
+  <img src="./img/flower.jpg" style="width:60%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">2 / 3</div>
-  <img src="./img/niagara.jpg" style="width:100%">
+  <img src="./img/niagara.jpg" style="width:60%">
   <div class="text">Caption Two</div>
 </div>
 
 <div class="mySlides fade">
   <div class="numbertext">3 / 3</div>
-  <img src="./img/sunset.jpg" style="width:100%">
+  <img src="./img/sunset.jpg" style="width:60%">
   <div class="text">Caption Three</div>
 </div>
 
 
 
-</div>
-<br>
-
-<div style="text-align:center">
-  <span class="dot"></span>
-  <span class="dot"></span>
-  <span class="dot"></span>
 </div>
           </aside>
         </div>
