--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <section>
         <img src='./img/self.jpg' alt='A picture of myself.' style="width:35%">
         <article>
-          <b>YOSELIN CASTELAN RAMIREZ
+          <p><b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
-<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!</b>
+<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!</b></p>
           </article>
       </section>
 
@@ -51,6 +51,12 @@
   <img src="./img/sunset.jpg" style="width:60%">
   <div class="text">Caption Three</div>
 </div>
+<br>
+<div style="text-align:center">
+  <span class="dot"></span>
+  <span class="dot"></span>
+  <span class="dot"></span>
+</div>
 
 
 
@@ -64,9 +70,9 @@
             <div class="centered">
           <aside>
             <h3>Film Work:</h3>
-            <video width="320" height="240" controls>
-  <source src="https://vimeo.com/464627366" type="video/mp4">
-  Define A Place.
+            <video class="video" src="" width="440" height="280" controls><p>This project
+              was part of my Documentary Film class where we filmed a community based project concerning different
+              topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</p>
 </video>
           </aside>
         </div>
@@ -77,7 +83,6 @@
     <script src="script.js"></script>
 
       </body>
-  <!-- Metadata goes here -->
   </head>
 
 </html>
