--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
         <article>
           <p><b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
-<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!</b></p>
+<br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!
+<br>With an interest in photography and film.
+<br>My goal is to become better at coding and familarize myself with different styles in order to become better at styling and having
+engaging websites.
+</b></p>
           </article>
       </section>
 
@@ -70,8 +74,17 @@
             <div class="centered">
           <aside>
             <h3>Film Work:</h3>
-            <video class="video" src="" width="440" height="280" controls><p>This project
-              was part of my Documentary Film class where we filmed a community based project concerning different
+            <div style="text-align:center">
+  <button onclick="playPause()">Play/Pause</button>
+  <button onclick="makeBig()">Big</button>
+  <button onclick="makeSmall()">Small</button>
+  <button onclick="makeNormal()">Normal</button>
+  <br><br>
+  <video id="video1" width="420">
+    <source src="./" type="video/mp4">
+  </video>
+</div>
+  <p>This project was part of my Documentary Film class where we filmed a community based project concerning different
               topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</p>
 </video>
           </aside>
