lets see if this works

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@ engaging websites.
   <button onclick="makeSmall()">Small</button>
   <button onclick="makeNormal()">Normal</button>
   <br><br>
-  <video id="video1" width="420">
-    <source src="./" type="video/mp4">
-  </video>
+
+    <iframe width="600" height="360" src="https://player.vimeo.com/video/596261383?h=19729d95e4">
+</iframe>
+
 </div>
   <p>This project was part of my Documentary Film class where we filmed a community based project concerning different
               topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</p>
