--- a/index.html
+++ b/index.html
@@ -75,13 +75,9 @@ engaging websites.
           <aside>
             <h3>Film Work:</h3>
             <div style="text-align:center">
-  <button onclick="playPause()">Play/Pause</button>
-  <button onclick="makeBig()">Big</button>
-  <button onclick="makeSmall()">Small</button>
-  <button onclick="makeNormal()">Normal</button>
-  <br><br>
 
-    <iframe width="600" height="360" src="https://player.vimeo.com/video/596261383?h=19729d95e4">
+
+    <iframe width="600" height="360" src="https://vimeo.com/video/596261383?h=19729d95e4">
 </iframe>
 
 </div>
