--- a/index.html
+++ b/index.html
@@ -74,10 +74,8 @@ engaging websites.
             <div class="centered">
           <aside>
             <h3>Film Work:</h3>
-            <div style="text-align:center">
 
-
-    <iframe width="600" height="360" src="https://vimeo.com/video/596261383?h=19729d95e4">
+    <iframe width="600" height="360" src="https://player.vimeo.com/video/596261383?h=19729d95e4">
 </iframe>
 
 </div>
