--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
   <body>
 
       <header>
+        <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+  </div>
+</div>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
 
       <section>
-        <img src='./img/self.jpg' alt='A picture of myself.' style="width:35%">
+        <img src='./img/myself.jpg' alt='A picture of myself.' style="width:35%">
         <article>
           <p><b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
