--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </header>
 
       <section>
-        <img src='./img/myself.jpg' alt='A picture of myself.' style="width:35%" float="right">
+        <img src='./img/myself.jpg' alt='A picture of myself.' style="width:35%" align="right">
         <article>
           <p><b>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN
