--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
       <section>
         <img src='./img/myself.jpg' alt='A picture of myself.' style="width:35%" align="right">
         <article>
-          <p><b>YOSELIN CASTELAN RAMIREZ
-<br>23 | NYC | MEXICAN
+          <p><i>YOSELIN CASTELAN RAMIREZ
+<br>23 | NYC | MEXICAN</i>
 <br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!
 <br>With an interest in photography and film.
 <br>My goal is to become better at coding and familarize myself with different styles in order to become better at styling and having
 engaging websites.
-</b></p>
+</p>
           </article>
       </section>
 
