--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <body>
 
       <header>
-        <div class="dropdown">
-  <button class="dropbtn">Dropdown</button>
-  <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-</div>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
+
+      <div class="scrollmenu">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#support">Support</a>
+</div>
 
       <section>
         <img id="centered" src='./img/myself.jpg' alt='A picture of myself.'>
