--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </div>
 
       <section>
-        <img id="centered" src='./img/myself.jpg' alt='A picture of myself.'>
+        <img id="centered" src='./img/myself.jpg' alt='A picture of myself.' width="35%" float:"right">
         <article>
           <p><i>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN</i>
