--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
       <section>
-        <img id="centered" src='./img/myself.jpg' alt='A picture of myself.' width="35%" float:"right">
+        <img style="float: right;" src='./img/myself.jpg' alt='A picture of myself.' width="35%">
         <article>
           <p><i>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN</i>
