--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
 
+      <div class="scrollmenu">
+  <a href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#support">Support</a>
+</div>
+
+
 
       <section>
         <img style="float: right;" src='./img/myself.jpg' alt='A picture of myself.' width="35%">
