--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
       <div class="scrollmenu">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="#news">WK2</a>
+  <a href="#contact">WK3</a>
+  <a href="#about">WK4</a>
   <a href="#support">Support</a>
 </div>
 
