changing text color

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@ engaging websites.
 </iframe>
 
 </div>
-  <p>This project was part of my Documentary Film class where we filmed a community based project concerning different
-              topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</p>
+  <div class="text">This project was part of my Documentary Film class where we filmed a community based project concerning different
+              topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</div>
 </video>
           </aside>
         </div>
