--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       <section>
 
         <article>
-          <p><i>YOSELIN CASTELAN RAMIREZ
+          <div class="about"> <p><i>YOSELIN CASTELAN RAMIREZ
 <br>23 | NYC | MEXICAN</i>
 <br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!
 <br>With an interest in photography and film.
 <br>My goal is to become better at coding and familarize myself with different styles in order to become better at styling and having
 engaging websites.
-</p>
+</p></div>
           </article>
           <img style="float: right;" src='./img/myself.jpg' alt='A picture of myself.' width="35%">
       </section>
