--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 
       <header>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
+        <div class="scrollmenu">
+    <a href="#home">Home</a>
+    <a href="#news">WK2</a>
+    <a href="#contact">WK3</a>
+    <a href="#about">WK4</a>
+    <a href="#support">Support</a>
+  </div>
+
       </header>
 
-      <div class="scrollmenu">
-  <a href="#home">Home</a>
-  <a href="#news">WK2</a>
-  <a href="#contact">WK3</a>
-  <a href="#about">WK4</a>
-  <a href="#support">Support</a>
-</div>
 
 
 
@@ -90,7 +91,7 @@ engaging websites.
 </iframe>
 
 </div>
-  <div class="text">This project was part of my Documentary Film class where we filmed a community based project concerning different
+  <div class="film">This project was part of my Documentary Film class where we filmed a community based project concerning different
               topics. I chose to showcase how people dealt with a normal activity, like visiting the zoo, during a pandemic.</div>
 
           </aside>
