about color change

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       </header>
 
       <div class="scrollmenu">
-  <a href="#home">Home</a>
-  <a href="#news">WK2</a>
-  <a href="#contact">WK3</a>
-  <a href="#about">WK4</a>
+  <a href="#home">HOME</a>
+  <a href="wk2">WK2</a>
+  <a href="wk3">WK3</a>
+  <a href="wk4">WK4</a>
   <a href="#support">Support</a>
 </div>
 
