--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
 
-      <br><div class="scrollmenu">
+      <div class="scrollmenu">
   <a href="#home">HOME</a>
   <a href="wk2">WK2</a>
   <a href="wk3">WK3</a>
