--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@ engaging websites.
             <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
+  <div class="numbertext"></div>
   <img src="./img/flower.jpg" style="width:60%">
   <div class="text">A visit at Brooklyn's Botanical Garden.</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
+  <div class="numbertext"></div>
   <img src="./img/niagara.jpg" style="width:60%">
   <div class="text">A trip to Niagara Falls.</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
+  <div class="numbertext"></div>
   <img src="./img/sunset.jpg" style="width:60%">
   <div class="text">A beautiful sunset.</div>
 </div>
