--- a/index.html
+++ b/index.html
@@ -15,16 +15,12 @@
       <header>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
       </header>
-
-      <div class="scrollmenu">
-  <a href="#home">HOME</a>
-  <a href="wk2">WK2</a>
-  <a href="wk3">WK3</a>
-  <a href="wk4">WK4</a>
-  <a href="#support">Support</a>
-</div>
-
-
+      <div class="navbar">
+        <a class="active" href="#">Home</a>
+        <a href="#">WK2</a>
+        <a href="#">WK3</a>
+        <a href="#">WK4</a>
+      </div>
 
 
 
