final editing with solved navbar

--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
   <meta content="text/html; charset=iso-8859-2" http-equiv="Content-Type">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='styles.css'>
+  <link href="horizontal-menu.css" rel="stylesheet">
+
 
   <body>
 
       <header>
         <h1 class="glow"> MEDP331 HOMEPAGE </h1>
+
       </header>
-      <div class="navbar">
-        <a class="active" href="#">Home</a>
-        <a href="#">WK2</a>
-        <a href="#">WK3</a>
-        <a href="#">WK4</a>
-      </div>
+
+      <div class="scrollmenu">
+        <ul>
+  <li><a href="#home">HOME</a></li>
+  <li><a href="#">WK2</a></li>
+  <li><a href="#">WK3</a></li>
+  <li><a href="#">WK4</a></li>
+</ul>
+</div>
+
 
 
 
@@ -31,8 +38,7 @@
 <br>23 | NYC | MEXICAN</i></b>
 <br>Through this website I want to showcase my growing skills as an Emerging Media Major and continue to develop as a content creator!
 <br>With an interest in photography and film.
-<br>My goal is to become better at coding and familarize myself with different styles in order to become better at styling and having
-engaging websites.
+<br>My goal is to become better at coding and familiarize myself with different styles in order to become better at web styling and development.
 </div>
           </article>
           <img style="float: right;" src='./img/myself.jpg' alt='A picture of myself.' width="35%">
