--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <div class="scrollmenu">
         <ul>
-  <li><a href="#home">HOME</a></li>
+  <li><a class="active" href="#home">HOME</a></li>
   <li><a href="#">WK2</a></li>
   <li><a href="#">WK3</a></li>
   <li><a href="#">WK4</a></li>
