--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='styles.css'>
   <link href="horizontal-menu.css" rel="stylesheet">
-
+</head>
 
   <body>
 
@@ -21,8 +21,8 @@
 
       <div class="scrollmenu">
         <ul>
-  <li><a class="active" href="#home">HOME</a></li>
-  <li><a href="#">WK2</a></li>
+  <li><a class="active" href="https://yoselinram97.github.io/web-production-2/">HOME</a></li>
+  <li><a href="week2/week2.html">WK2</a></li>
   <li><a href="#">WK3</a></li>
   <li><a href="#">WK4</a></li>
 </ul>
@@ -106,6 +106,6 @@
     <script src="script.js"></script>
 
       </body>
-  </head>
+
 
 </html>
