--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="scrollmenu">
         <ul>
   <li><a class="active" href="https://yoselinram97.github.io/web-production-2/">HOME</a></li>
-  <li><a href="week2/week2.html">WK2</a></li>
+  <li><a href="./week2/week2.html">WK2</a></li>
   <li><a href="#">WK3</a></li>
   <li><a href="#">WK4</a></li>
 </ul>
