--- a/week2/week2.html
+++ b/week2/week2.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel='stylesheet' href='week2.css'>
   <link href="horizontal-menu.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="utilities.js"></script>
 
 </head>
@@ -23,14 +24,23 @@
 
   <div class="scrollmenu">
     <ul>
-<li><a href="https://yoselinram97.github.io/web-production-2/">HOME</a></li>
-<li><a class="active" href="week2/week2.html">WK2</a></li>
+<li><a href="../index.html">HOME</a></li>
+<li><a class="active" href="week2.html">WK2</a></li>
 <li><a href="#">WK3</a></li>
 <li><a href="#">WK4</a></li>
 </ul>
 </div>
 
+
   <!-- poem here -->
+  <div class="text">
+    <p><b>Refresh the button to create a new poem!</b></p>
   <script src="week2.js"></script>
+  <p>
+    <a href="week2.html"><i class="fa fa-refresh" style="font-size:36px;"></i></a>
+  </p>
+</div>
+
+
 </body>
 </html>
