--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
   <li><a class="active" href="https://yoselinram97.github.io/web-production-2/">HOME</a></li>
   <li><a href="./week2/week2.html">WK2</a></li>
-  <li><a href="#">WK3</a></li>
+  <li><a href="./week3/week3.html">WK3</a></li>
   <li><a href="#">WK4</a></li>
 </ul>
 </div>
