adding week3 link to week2

--- a/week2/week2.html
+++ b/week2/week2.html
@@ -26,7 +26,7 @@
     <ul>
 <li><a href="../index.html">HOME</a></li>
 <li><a class="active" href="week2.html">WK2</a></li>
-<li><a href="#">WK3</a></li>
+<li><a href="../week3/week3.html">WK3</a></li>
 <li><a href="#">WK4</a></li>
 </ul>
 </div>
