--- a/week3/week3.html
+++ b/week3/week3.html
@@ -32,13 +32,10 @@
 </div>
 
 
-  <!-- poem here -->
+<h2>A night in the city.</h2>
   <div class="text">
   <script src="./p5_sketch/sketch.js"></script>
 
-  <p>
-    <a href="week2.html"><i class="fa fa-refresh" style="font-size:36px;"></i></a>
-  </p>
 </div>
 
 
