fixing broken link

--- a/week3/week3.html
+++ b/week3/week3.html
@@ -25,7 +25,7 @@
   <div class="scrollmenu">
     <ul>
 <li><a href="../index.html">HOME</a></li>
-<li><a href="week2.html">WK2</a></li>
+<li><a href="../week2/week2.html">WK2</a></li>
 <li><a class="active" href="week3.html">WK3</a></li>
 <li><a href="#">WK4</a></li>
 </ul>
