adding css transitions

--- a/week3/week3.html
+++ b/week3/week3.html
@@ -31,12 +31,18 @@
 </ul>
 </div>
 
+<section class="translating">
+      <p><b>Obtaining inspiration from night pictures I've taken to create a piece of animated art.</b></p>
+      <p>
+      <img src="../img/lights.JPG" class="translate scale-transition">
+      <img src="../img/moon.JPG" class="translate scale-transition">
+      <img src="../img/clouds.JPG" class="translate scale-transition">
+    </p>
+    </section>
 
-<h2>A night in the city.</h2>
-  <div class="text">
+<p><b>P5 Sketch: A night in the city.</b>
   <script src="./p5_sketch/sketch.js"></script>
-
-</div>
+</p>
 
 
 </body>
