adding 4th week video work

--- a/week2/week2.html
+++ b/week2/week2.html
@@ -27,7 +27,7 @@
 <li><a href="../index.html">HOME</a></li>
 <li><a class="active" href="week2.html">WK2</a></li>
 <li><a href="../week3/week3.html">WK3</a></li>
-<li><a href="#">WK4</a></li>
+<li><a href="../week4/week4.html">WK4</a></li>
 </ul>
 </div>
 
