--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <li><a class="active" href="https://yoselinram97.github.io/web-production-2/">HOME</a></li>
   <li><a href="./week2/week2.html">WK2</a></li>
   <li><a href="./week3/week3.html">WK3</a></li>
-  <li><a href="#">WK4</a></li>
+  <li><a href="./week4/week4.html">WK4</a></li>
 </ul>
 </div>
 
