--- a/week3/week3.html
+++ b/week3/week3.html
@@ -28,6 +28,7 @@
 <li><a href="../week2/week2.html">WK2</a></li>
 <li><a class="active" href="week3.html">WK3</a></li>
 <li><a href="../week4/week4.html">WK4</a></li>
+<li><a href="../week5/week5.html">WK5</a></li>
 </ul>
 </div>
 
