--- a/week4/week4.html
+++ b/week4/week4.html
@@ -25,6 +25,7 @@
   <li><a href="../week2/week2.html">WK2</a></li>
   <li><a href="../week3/week3.html">WK3</a></li>
   <li><a class="active"  href="week4.html">WK4</a></li>
+  <li><a href="../week5/week5.html">WK5</a></li>
   </ul>
   </div>
 
