adding week 6 work

--- a/week4/week4.html
+++ b/week4/week4.html
@@ -26,6 +26,10 @@
   <li><a href="../week3/week3.html">WK3</a></li>
   <li><a class="active"  href="week4.html">WK4</a></li>
   <li><a href="../week5/week5.html">WK5</a></li>
+  <li><a href="../week6/week6.html">WK6</a></li>
+  <li><a href="">WK7</a></li>
+  <li><a href="">WK8</a></li>
+  <li><a href="">WK9</a></li>
   </ul>
   </div>
 
