--- a/week6/week6.html
+++ b/week6/week6.html
@@ -32,7 +32,10 @@
 </div>
 
     <main>
-      <section> <h2> TV SHOW GUIDE </h2></section>
+      <section> <h2> TV SHOW GUIDE </h2>
+<div id='gif'></div>
+      </section>
+
       <p>Choose a genre/topic of TV show you would like to watch and look at the recommended list.</p>
       <p>
       <input id="text-input"> <button id="get-input">Search For Genre/Topic</button>
