--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <li><a href="./week4/week4.html">WK4</a></li>
   <li><a href="./week5/week5.html">WK5</a></li>
   <li><a href="./week6/week6.html">WK6</a></li>
-  <li><a href="">WK7</a></li>
+  <li><a href="./midterm/midterm.html">MIDTERM</a></li>
   <li><a href="">WK8</a></li>
   <li><a href="">WK9</a></li>
 
