--- a/week4/week4.html
+++ b/week4/week4.html
@@ -27,9 +27,10 @@
   <li><a class="active"  href="week4.html">WK4</a></li>
   <li><a href="../week5/week5.html">WK5</a></li>
   <li><a href="../week6/week6.html">WK6</a></li>
-  <li><a href="">WK7</a></li>
-  <li><a href="">WK8</a></li>
-  <li><a href="">WK9</a></li>
+  <li><a href="../midterm/midterm.html">MIDTERM</a></li>
+  <li><a href="https://intense-ridge-36781.herokuapp.com/">WK8</a></li>
+  <li><a href="https://yoselin-book-blog.herokuapp.com/">WK9</a></li>
+  <li><a href="https://yoselin-travel-vlog.herokuapp.com/">FINAL</a></li>
   </ul>
   </div>
 
