--- a/week5/week5.html
+++ b/week5/week5.html
@@ -25,9 +25,10 @@
       <li><a href="../week4/week4.html">WK4</a></li>
       <li><a class="active" href="week5.html">WK5</a></li>
       <li><a href="../week6/week6.html">WK6</a></li>
-      <li><a href="">WK7</a></li>
-      <li><a href="">WK8</a></li>
-      <li><a href="">WK9</a></li>
+      <li><a href="../midterm/midterm.html">MIDTERM</a></li>
+      <li><a href="https://intense-ridge-36781.herokuapp.com/">WK8</a></li>
+      <li><a href="https://yoselin-book-blog.herokuapp.com/">WK9</a></li>
+      <li><a href="https://yoselin-travel-vlog.herokuapp.com/">FINAL</a></li>
       </ul>
       </div>
 
